# cchess

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  POTFILES.in  cchess.pot  zh_CN.gmo  zh_CN.po
src/: Makefile.am  Makefile.in  callback.c  callback.h  cchess.c  cchess.h  createwindow.c  createwindow.h  main.c  network.c  network.h
